--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "dependencies": {
     "axios": "^0.24.0",
+    "csv-writer": "^1.6.0",
     "express": "^4.17.1"
   },
   "devDependencies": {},
